# REST_API

./: .env  .env_  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-image.yml
app/: __init__.py  models.py  tasks.py  views.py
app_tests/: db_tests.py
migrations/: .env
migrations/versions/: c253d42f0e55_initial_migration.py
migrations_/: .env
tests/: data.csv  gen.py  load_k6.js  load_k6_copy.js  load_specif_k6.js  offers_req.py  test_db.py
